--- a/webpetshopfinder/petshopfinder/package.json
+++ b/webpetshopfinder/petshopfinder/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.15.15",
     "@mui/x-date-pickers": "^7.3.1",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
