--- a/apipetshopfinder/package.json
+++ b/apipetshopfinder/package.json
@@ -2,6 +2,9 @@
   "name": "apipetshopfinder",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.17.1"
+  },
   "main": "src/index.js",
   "scripts": {
     "start": "nodemon"
