--- a/webpetshopfinder/petshopfinder/package.json
+++ b/webpetshopfinder/petshopfinder/package.json
@@ -20,7 +20,8 @@
     "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "eslint": "^8",
