--- a/apipetshopfinder/package.json
+++ b/apipetshopfinder/package.json
@@ -7,6 +7,7 @@
   },
   "main": "src/index.js",
   "scripts": {
+    "start": "node srx/index",
     "start": "nodemon"
   },
   "author": "Rafael Marques Radieddine",
